# ros_hats

./: .gitignore  BaseServoHatDriver_8h.html  BaseServoHatDriver_8h__dep__incl.map  BaseServoHatDriver_8h__dep__incl.md5  BaseServoHatDriver_8h__incl.map  BaseServoHatDriver_8h__incl.md5  CMakeLists.txt  Channel_8h.html  Channel_8h__dep__incl.map  Channel_8h__dep__incl.md5  Channel_8h__incl.map  Channel_8h__incl.md5  DigitalInputChannel_8h.html  DigitalInputChannel_8h__dep__incl.map  DigitalInputChannel_8h__dep__incl.md5  DigitalInputChannel_8h__incl.map  DigitalInputChannel_8h__incl.md5  DigitalInputPort_8h.html  DigitalInputPort_8h__dep__incl.map  DigitalInputPort_8h__dep__incl.md5  DigitalInputPort_8h__incl.map  DigitalInputPort_8h__incl.md5  DigitalOutputChannel_8h.html  DigitalOutputChannel_8h__dep__incl.map  DigitalOutputChannel_8h__dep__incl.md5  DigitalOutputChannel_8h__incl.map  DigitalOutputChannel_8h__incl.md5  DigitalOutputPort_8h.html  DigitalOutputPort_8h__dep__incl.map  DigitalOutputPort_8h__dep__incl.md5  DigitalOutputPort_8h__incl.map  DigitalOutputPort_8h__incl.md5  Doxyfile  Doxyfile.in  GPSHatDriver_8h.html  GPSHatDriver_8h__dep__incl.map  GPSHatDriver_8h__dep__incl.md5  GPSHatDriver_8h__incl.map  GPSHatDriver_8h__incl.md5  GPSHatNodeProcess_8h.html  (+642 more)
.github/workflows/: buildtest.yml
archive/include/src/: CMakeLists.txt
coverage/: coverage.HatDefinition.cpp.01186199a7862ea4263272a102a98c2b.html  coverage.RaspberryPiDefinition.cpp.c1da7ff016ad0ddeaabc9288e1e6f27f.html  coverage.functions.html  coverage.html  coverage.xml
doc/: ROSHatsPackageDiagram.puml
doc/SupportedHats/: SuportedHats.md
doc/SupportedHats/GPSHat/: GPSHat.md
doc/SupportedHats/ServoHat/: ServoHat.md
doc/TestPlan/: TestPlan.ods
driver/: CMakeLists.txt
driver/GPSHatDriver/exec/: exec_GPSHatDriver.cpp
driver/GPSHatDriver/include/: GPSHatDriver.h
driver/GPSHatDriver/src/: CMakeLists.txt  GPSHatDriver.cpp
include/doc/: RosHatsDefinitionClassDiagram.puml
include/ros_hats/: CoordinateDefinitions.h  HatDefinition.h  ROSHATS_Definitions.h  RaspberryPiDefinition.h
include/ros_hats/Channel/: Channel.h  DigitalInputChannel.h  DigitalOutputChannel.h  GPSInputChannel.h  PWMInputChannel.h  PWMOutputChannel.h  ServoOutputChannel.h
include/ros_hats/Hat/: GPSHat.h  Hat.h  PWMHat.h  RelayHat.h  ServoHat.h  TerminalHat.h
include/ros_hats/Port/: DigitalOutputPort.h  GPSInputPort.h  PWMOutputPort.h  Port.h  ServoOutputPort.h
launch/: hat_node.launch  pwmhat_node.launch  relayhat_node.launch  sample_node.launch
nodes/GPSHatNode/: CMakeLists.txt
nodes/GPSHatNode/doc/: GPSHatNodeClassDiagram.puml  GPSHatNodeSequenceDiagram.puml  SampleNodeClassDiagram.puml  SampleNodeSequenceDiagram.puml
nodes/GPSHatNode/driver/GPSHatDriver/exec/: CMakeLists.txt  exec_GPSHatDriver.cpp
nodes/GPSHatNode/launch/: gps_hat_node.launch
nodes/GPSHatNode/node/: CMakeLists.txt  GPSHatNode.cpp  GPSHatNode.h  GPSHatNodeProcess.cpp  GPSHatNodeProcess.h
nodes/GPSHatNode/node/test/: CMakeLists.txt  test_GPSHatNode.cpp  test_GPSHatNode.test  test_GPSHatNodeProcess.cpp  test_SampleNode.cpp  test_SampleNode.test  test_SampleNodeProcess.cpp
nodes/GPSHatNode/util/: CMakeLists.txt  UTMConversion.cpp  UTMConversion.h
nodes/HatNode/: CMakeLists.txt  HatNode.cpp  HatNode.h  HatNodeProcess.cpp  HatNodeProcess.h
nodes/HatNode/test/: CMakeLists.txt  test_HatNodeProcess.cpp
nodes/ServoHatNode/: CMakeLists.txt
nodes/ServoHatNode/doc/: ServoHatNodeClassDiagram.puml  ServoHatNodeSequenceDiagram.puml
nodes/ServoHatNode/driver/: CMakeLists.txt
nodes/ServoHatNode/driver/MockServoHatDriver/include/: MockServoHatDriver.h
nodes/ServoHatNode/driver/MockServoHatDriver/src/: CMakeLists.txt  MockServoHatDriver.cpp
nodes/ServoHatNode/driver/MockServoHatDriver/src/test/: CMakeLists.txt  test_ServoHatDriver.cpp
nodes/ServoHatNode/driver/ServoHatDriver/exec/: CMakeLists.txt  exec_ServoHatDriver.cpp
nodes/ServoHatNode/driver/ServoHatDriver/include/: ServoHatDriver.h
nodes/ServoHatNode/driver/ServoHatDriver/src/: CMakeLists.txt  ServoHatDriver.cpp
nodes/ServoHatNode/driver/ServoHatDriver/src/test/: CMakeLists.txt  test_ServoHatDriver.cpp
nodes/ServoHatNode/driver/doc/: ServoHatDriverClassDiagram.puml  ServoHatDriverSequenceDiagram.puml
nodes/ServoHatNode/driver/exec/: CMakeLists.txt  exec_ServoHatDriver.cpp
nodes/ServoHatNode/driver/include/: BaseServoHatDriver.h  IServoHatDriver.h
nodes/ServoHatNode/launch/: servo_hat_node.launch
nodes/ServoHatNode/node/: CMakeLists.txt  ServoHatNode.cpp  ServoHatNode.h  ServoHatNodeProcess.cpp  ServoHatNodeProcess.h
nodes/ServoHatNode/node/test/: CMakeLists.txt  test_ServoHatNode.cpp  test_ServoHatNode.test  test_ServoHatNodeProcess.cpp
scripts/: dev_tools.sh  formatter.sh
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  (+27 more)
src/: CMakeLists.txt  HatDefinition.cpp  RaspberryPiDefinition.cpp
src/Channel/: CMakeLists.txt  Channel.cpp  DigitalInputChannel.cpp  DigitalOutputChannel.cpp  PWMInputChannel.cpp  PWMOutputChannel.cpp  ServoOutputChannel.cpp
src/Hat/: CMakeLists.txt  GPSHat.cpp  Hat.cpp  PWMHat.cpp  RelayHat.cpp  ServoHat.cpp  TerminalHat.cpp
src/Hat/Driver/: GPIODriver.cpp  GPSHatDriver.cpp
src/Hat/test/: CMakeLists.txt  test_gpshat.cpp  test_pwmhat.cpp  test_relayhat.cpp  test_servohat.cpp  test_terminalhat.cpp
src/Port/: CMakeLists.txt  DigitalOutputPort.cpp  PWMOutputPort.cpp  Port.cpp
src/archive/Hat/: Hat.cpp  (+2 more)
src/archive/test/: CMakeLists.txt  test_definitions.cpp
src/test/: CMakeLists.txt  test_base.cpp  test_definitions.cpp  test_hatDefinitions.cpp  test_raspberryPiDefinition.cpp
(+42 files in other folders)
