add_library(hatNodeProcess HatNodeProcess.cpp)
target_link_libraries(hatNodeProcess ${catkin_LIBRARIES} baseNodeProcess)
add_subdirectory(test)

add_executable(hat_node HatNode.cpp) 
target_link_libraries(hat_node ${catkin_LIBRARIES} ${Boost_LIBRARIES} hatNodeProcess baseNode roshat_relayhat roshat_terminalhat)
if (${CMAKE_HOST_SYSTEM_PROCESSOR} STREQUAL armv7l)
    target_link_libraries(hat_node roshat_servohat) 
endif ()
add_dependencies(hat_node ${eros_EXPORTED_TARGETS})
