catkin_add_gtest(test_hatDefinitions test_hatDefinitions.cpp)
target_link_libraries(test_hatDefinitions ${catkin_LIBRARIES} ${Boost_LIBRARIES} hatDefinition)

catkin_add_gtest(test_raspberryPiDefinitions test_raspberryPiDefinition.cpp)
target_link_libraries(test_raspberryPiDefinitions ${catkin_LIBRARIES} ${Boost_LIBRARIES} raspberryPiDefinition)